stock-dashboard-api/deployment/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-dashboard-api-deployment
  labels:
    app: stock-dashboard-api

spec:
  template:
    spec:
      serviceAccountName: app-sa
      volumes:
        - name: aurora-cacrts
          configMap:
            name: aurora-cacrts
      containers:
        - name: app
          image: ghcr.io/saavrm26/stock-dashboard/api:latest
          # For debugging
          command: ["/bin/bash"]
          args: ["-c", "while true; do echo hello; sleep 10; done"]

          volumeMounts:
            - mountPath: /etc/aurora-cacrts
              name: aurora-cacrts
